URLクラスが非推奨になっていたのでURIクラスに置き換えた